KNL-201 use efficient object creation methods
git-svn-id: https://source.sakaiproject.org/svn/kernel/trunk@63293 66ffb92e-73f9-0310-93c1-f5514f145a0a