@@ -46,22 +46,22 @@ import org.sakaiproject.exception.TypeException;
 public interface DavManager 
 {
 	/** Status code (201) indicating the request succeeded and created a new resource on the server. */
-	public final static Integer STATUS_CREATED = new Integer(HttpServletResponse.SC_CREATED);
+	public final static Integer STATUS_CREATED = Integer.valueOf(HttpServletResponse.SC_CREATED);
 	
 	/** Status reporting an operation succeeded without creation of a new resource */
-	public final static Integer STATUS_NO_CONTENT = new Integer(HttpServletResponse.SC_NO_CONTENT);
+	public final static Integer STATUS_NO_CONTENT = Integer.valueOf(HttpServletResponse.SC_NO_CONTENT);
 	
 	/** Status code (401) indicating that the request requires HTTP authentication. */
-	public final static Integer STATUS_UNAUTHORIZED = new Integer(HttpServletResponse.SC_UNAUTHORIZED);
+	public final static Integer STATUS_UNAUTHORIZED = Integer.valueOf(HttpServletResponse.SC_UNAUTHORIZED);
 	
 	/** Status code (403) indicating the server understood the request but refused to fulfill it. */
-	public final static Integer STATUS_FORBIDDEN = new Integer(HttpServletResponse.SC_FORBIDDEN);
+	public final static Integer STATUS_FORBIDDEN = Integer.valueOf(HttpServletResponse.SC_FORBIDDEN);
 	
 	/** Status code (409) indicating requested action cannot be executed on an existing resource. */
-	public final static Integer STATUS_METHOD_NOT_ALLOWED = new Integer(HttpServletResponse.SC_METHOD_NOT_ALLOWED);
+	public final static Integer STATUS_METHOD_NOT_ALLOWED = Integer.valueOf(HttpServletResponse.SC_METHOD_NOT_ALLOWED);
 	
 	/** Status code (409) indicating a resource cannot be created at the destination until one or more intermediate collections have been created. */
-	public final static Integer STATUS_CONFLICT = new Integer(HttpServletResponse.SC_CONFLICT);
+	public final static Integer STATUS_CONFLICT = Integer.valueOf(HttpServletResponse.SC_CONFLICT);
 	
 	
 	/*
