@@ -1601,7 +1601,7 @@ public abstract class DbAuthzGroupService extends BaseAuthzGroupService
 						try
 						{
 							int count = result.getInt(1);
-							return new Integer(count);
+							return Integer.valueOf(count);
 						}
 						catch (SQLException ignore)
 						{
@@ -1636,7 +1636,7 @@ public abstract class DbAuthzGroupService extends BaseAuthzGroupService
 							try
 							{
 								int count = result.getInt(1);
-								return new Integer(count);
+								return Integer.valueOf(count);
 							}
 							catch (SQLException ignore)
 							{
@@ -1668,7 +1668,7 @@ public abstract class DbAuthzGroupService extends BaseAuthzGroupService
 					try
 					{
 						int count = result.getInt(1);
-						return new Integer(count);
+						return Integer.valueOf(count);
 					}
 					catch (SQLException ignore)
 					{
