@@ -84,7 +84,7 @@ public class DbDigestService extends BaseDigestService
 	 */
 	public void setLocksInDb(String value)
 	{
-		m_locksInDb = new Boolean(value).booleanValue();
+		m_locksInDb = Boolean.valueOf(value).booleanValue();
 	}
 
 	/** Configuration: to run the ddl on init or not. */
@@ -98,7 +98,7 @@ public class DbDigestService extends BaseDigestService
 	 */
 	public void setAutoDdl(String value)
 	{
-		m_autoDdl = new Boolean(value).booleanValue();
+		m_autoDdl = Boolean.valueOf(value).booleanValue();
 	}
 
 	/**********************************************************************************************************************************************************************************************************************************************************
