@@ -390,7 +390,7 @@ public class BaseDbBinarySingleStorage implements DbSingleStorage
 				try
 				{
 					int count = result.getInt(1);
-					return new Integer(count);
+					return Integer.valueOf(count);
 				}
 				catch (SQLException ignore)
 				{
@@ -417,7 +417,7 @@ public class BaseDbBinarySingleStorage implements DbSingleStorage
 				try
 				{
 					int count = result.getInt(1);
-					return new Integer(count);
+					return Integer.valueOf(count);
 				}
 				catch (SQLException ignore)
 				{
